syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "HelloProto";

service BookService {
  rpc SayHello (BookRequest) returns (BookResponse);
}

message BookRequest {
  int64 id_book = 1;
}

message BookResponse {
  int64 id_book = 1;
  string title = 2;
  string author = 3;
  string genre = 4;
}
